# MyNachos4.1

./: .gitignore  README.md  lab1测试命令  lab2测试命令  lab3测试命令  lab4测试命令
code/: README
code/build.linux/: Makefile  Makefile.dep  makedep  nachos  swtch.s
code/filesys/: filesys.cc  openfile.cc
code/lib/: bitmap.cc  debug.cc  libtest.cc  list.cc  list.cc.orig  sysdep.cc  sysdep.cc.orig  sysdep.h  tut.h  tut_reporter.h  tut_restartable.h
code/machine/: console.cc  interrupt.cc  machine.cc  machine.h  mipssim.cc  stats.cc  stats.h  translate.cc  translate.h
code/shell/: Makefile  Makefile.in  Makefile.in.orig  config.h  config.h.in  config.status  configure  configure.ac  nachos_syscall.c  nachos_syscall.h  shell.c
code/test/: Makefile  Makefile.dep  add.c  add.noff  halt.noff  matmult.c  matmult.noff  script  shell.noff  sort.noff  start.s
code/threads/: alarm.cc  kernel.cc  kernel.h  main.cc  main.h  myTest.cc  scheduler.cc  scheduler.h  switch.s  synch.cc  synch.h  synchlist.cc  synchlist.h  thread.cc  thread.h
code/userprog/: addrspace.cc  addrspace.h  exception.cc  noff.h  synchconsole.cc  syscall.h
